# lra

./: .env.example  .gitignore  README.md  cli.py  cli_framework.py  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  deps.py  main_agent.py  observability.py  subagent_registry.py
agents/subagents/: __init__.py  code_execution_agent.py  research_agent.py
long_running_agents/: __init__.py  chat.py
long_running_agents/examples/: 01_basic_chat.py  02_single_turn.py  README.md  __init__.py
memory/: __init__.py  db_models.py  hybrid_retrieval.py  structured_store.py  summarization.py  vector_store.py
sandbox/: Dockerfile  Dockerfile.manager  __init__.py  kernel_server.py  middleware.py  server.py
schemas/: __init__.py  memory.py  sandbox.py
tests/: test_integration.py
tools/: __init__.py  dynamic_tools.py  memory_tools.py  sandbox_tools.py  subagent_tools.py  task_tools.py
