[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "long-running-agents"
version = "0.1.2"
description = "A Pydantic AI agent that remembers across sessions, can create its own tools, and delegates to specialists"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "LongRunningAgents" }]
keywords = ["ai", "agents", "pydantic-ai", "sandbox", "memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic-ai[openai]>=0.0.14",
    "httpx>=0.27.0",
    "chromadb>=0.4.22",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "greenlet>=3.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
    "logfire>=0.1.0",
    "sentence-transformers>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/prith27/lra"
Repository = "https://github.com/prith27/lra"

[project.scripts]
lra = "cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "tools*", "memory*", "schemas*", "sandbox*", "long_running_agents*"]

[tool.setuptools]
py-modules = ["config", "cli", "cli_framework"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
